cli/tests/snapshots/cli__repl_import_unqualified_survives_alias_shadow.snap
---
source: cli/tests/cli.rs
expression: "repl_exec(&formatdoc!\n{r#\"\n        import gleam/io.{{println}}\n        import sgleam/io\n        println(\"hello\")\"#})"
---
hello
Nil
