cli/tests/snapshots/cli__repl_import_unqualified_then_alias.snap
---
source: cli/tests/cli.rs
expression: "repl_exec(&formatdoc!\n{r#\"\n        import gleam/int.{{to_string}}\n        to_string(1)\n        import gleam/int as i\n        i.to_string(2)\n        to_string(3)\"#})"
---
"1"
"2"
"3"
