cli/tests/snapshots/cli__repl_input_the_file_ends_in_the_middle_of.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Syntax error
  ┌─ <repl>:1:8
  │
1 │ case x {
  │        ^ The module ended unexpectedly
