cli/tests/snapshots/cli__repl_unknown_command.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&out)
---
Unknown command :typ. Type :help to see the commands.
The :type command takes an expression.
The :quit command takes nothing after it.
