cli/tests/snapshots/cli__repl_warning.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
warning: Redundant comparison
  ┌─ <repl>:1:8
  │
1 │ assert 1 == 1
  │        ^^^^^^ This is always `True`

This comparison is redundant since it always succeeds.
