cli/tests/snapshots/cli__repl_warns_inside_a_body_it_wrote_into.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
warning: Unused variable
  ┌─ <repl>:2:7
  │
2 │   let a = 1
  │       ^ This variable is never used

Hint: You can ignore it with an underscore: `_a`.
